[package]
name = "problem-pool"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"

[dependencies]
hmac = "0.7"
sha2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10"
rusoto_dynamodb = "0.40"
rusoto_core = "0.40"
lambda_runtime = "0.2"
hex = "0.3"
chrono = "0.4"
failure = "0.1"
